# Silicon-Studio

./: .gitignore  README.md  models.json  package-lock.json  package.json  synthetic_data.csv  verify_llama.py
backend/: main.py  pyproject.toml
backend/app/api/: engine.py  preparation.py  shield.py  studio.py
backend/app/engine/: base.py  factory.py  mlx_service.py  service.py  unsloth_service.py
backend/app/monitor/: system.py
backend/app/preparation/: service.py
backend/app/shield/: service.py
backend/app/studio/: service.py
backend/spec/: silicon_server.spec
src/main/: main.ts
src/renderer/: package-lock.json
src/renderer/src/: App.tsx
src/renderer/src/api/: client.ts
src/renderer/src/components/: ChatInterface.tsx  DataStudio.tsx  EngineInterface.tsx  EngineSelectionModal.tsx  MemoryTetris.tsx  ModelsInterface.tsx  ShieldInterface.tsx
